--- a/art.html
+++ b/art.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Burnline – Art</title>
+  <title>Art – Burnline</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -12,10 +12,8 @@
       background: linear-gradient(135deg, #0f0f1c, #1b1e35);
       color: #f0f0f0;
     }
-    html {
-      scroll-behavior: smooth;
-    }
-    h1, h2, h3, h4, h5, h6, nav a, header {
+
+    h1, h2, h3, h4, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
 
@@ -36,8 +34,8 @@
       display: flex;
       align-items: center;
       gap: 1rem;
-      text-decoration: none;
-      color: inherit;
+        text-decoration: none;
+  color: inherit;
     }
 
     .logo-title img {
@@ -98,200 +96,164 @@
       }
     }
 
-    .carousel-container {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
+    .content {
+      max-width: 800px;
+      margin: 4rem auto;
+      padding: 0 2rem;
+      text-align: center;
     }
 
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      gap: 1.5rem;
+    .gradient-heading {
+      font-size: 2rem;
+      background: linear-gradient(90deg, #f72585, #7209b7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 1rem;
     }
 
-    .carousel img {
-      height: 200px;
-      border-radius: 10px;
-      cursor: pointer;
-      scroll-snap-align: center;
-      transition: transform 0.3s ease;
+    .gradient-pink {
+      background: linear-gradient(90deg, #ff4ac2, #c52bd9);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
-    .carousel img:hover {
-      transform: scale(1.05);
+    .gradient-blue {
+      background: linear-gradient(90deg, #0df6e3, #2abfff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0,0,0,0.9);
-      justify-content: center;
-      align-items: center;
-      animation: fadeIn 0.4s ease;
-    }
-
-    .modal img {
-      max-width: 80%;
-      max-height: 80vh;
-      border-radius: 12px;
-    }
-
-    .modal.active {
-      display: flex;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    .content p {
+      line-height: 1.7;
+      color: #ccc;
+      margin-bottom: 1.2rem;
     }
 
     footer {
       background: #0f0f1c;
-      padding: 4rem 2rem 2rem;
-      color: #aaa;
-      font-size: 0.9rem;
-      font-family: 'Inter', sans-serif;
-    }
-
-    footer a:hover {
-      color: #0df6e3;
+      padding: 2rem 1rem;
+      color: #ccc;
     }
 
     .footer-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      gap: 3rem;
       max-width: 1200px;
       margin: auto;
     }
 
     .footer-column {
-      flex: 1 1 250px;
-      min-width: 200px;
+      flex: 1;
+      min-width: 250px;
+      margin: 1rem;
     }
 
     .footer-logo {
-      height: 100px;
+      width: 60px;
       margin-bottom: 1rem;
+    }
+
+    .newsletter-input {
+      padding: 0.5rem;
+      border: none;
+      border-radius: 4px;
+      width: 100%;
+      max-width: 250px;
+      margin-bottom: 0.5rem;
+    }
+
+    .newsletter-button {
+      padding: 0.5rem 1rem;
+      background-color: #0df6e3;
+      border: none;
+      border-radius: 4px;
+      color: #0f0f1c;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .newsletter-button:hover {
+      background-color: #0bc2b7;
     }
 
     .footer-bottom {
       text-align: center;
-      margin-top: 3rem;
-      border-top: 1px solid #222;
-      padding-top: 1rem;
-      color: #555;
+      margin-top: 2rem;
+      font-size: 0.8rem;
+      color: #666;
     }
 
-    .newsletter-input {
-      padding: 0.6rem 1rem;
-      border-radius: 4px;
-      border: none;
-      width: 70%;
-      margin-bottom: 0.8rem;
-    }
-
-    .newsletter-button {
-      padding: 0.6rem 1.2rem;
-      background-color: #0df6e3;
-      color: #0f0f1c;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
+    .footer-column a:hover {
+      text-decoration: underline;
+      color: #0df6e3;
     }
   </style>
 </head>
 <body>
+
   <header class="site-header">
-    <a href="index.html" class="logo-title">
-      <img src="Flame logo-1.png.png" alt="Burnline logo">
-      <span>BURNLINE</span>
-    </a>
+<a href="index.html" class="logo-title">
+  <img src="Flame logo-1.png.png" alt="Burnline logo">
+  <span>BURNLINE</span>
+</a>
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <nav class="site-nav" id="site-nav">
+    <nav class="site-nav" id="site-nav"> 
+      <a href="index.html">Home</a>
       <a href="fiction.html">Fiction</a>
       <a href="art.html">Art</a>
-      <a href="about.html">About</a>
+      <a href="https://bowliopia.github.io/burnline/about.html">About</a>
       <a href="submit.html">Submit</a>
     </nav>
   </header>
 
-  <main class="carousel-container">
-    <h1 style="text-align:center; color:#0df6e3;">Featured Art</h1>
-    <div class="carousel" id="carousel">
-      <img src="CBA1.jpg" alt="CBA1">
-      <img src="CBA3.jpg" alt="CBA3">
-      <img src="CBA4.jpg" alt="CBA4">
-      <img src="CBA5.jpg" alt="CBA5">
-      <img src="CBA6.jpg" alt="CBA6">
-      <img src="placeholder1.jpg" alt="Placeholder 1">
-      <img src="placeholder2.jpg" alt="Placeholder 2">
-      <img src="placeholder3.jpg" alt="Placeholder 3">
-    </div>
-  </main>
-
-  <div class="modal" id="modal">
-    <img id="modal-img" src="" alt="Expanded view">
-  </div>
+  <section class="content">
+    <h1 class="gradient-heading">Page still under construction</h1>
+    <p>Thanks for checking out our <span class="gradient-pink">art page</span>. We’re almost ready to start accepting and showing off your shitty art. <span class="gradient-blue"> Check back soon.</span></p>
+  </section>
 
   <footer>
     <div class="footer-container">
+      <!-- Newsletter -->
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
-        <form>
+        <p style="line-height: 1.6;">Sign up to our <span class="gradient-pink">newsletter</span> to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input">
           <br>
           <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
       </div>
+
+      <!-- Contact Info -->
       <div class="footer-column">
-        <h4 style="color: #0df6e3;">Get In Touch</h4>
+        <h4 class="gradient-blue">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
+
+      <!-- Read -->
       <div class="footer-column">
-        <h4 style="color: #0df6e3;">Read</h4>
+        <h4 class="gradient-blue">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
         <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
       </div>
     </div>
-    <div class="footer-bottom">&copy; 2025 Burnline Magazine — All rights reserved</div>
+
+    <div class="footer-bottom">
+      &copy; 2025 Burnline Magazine — All rights reserved
+    </div>
   </footer>
 
   <script>
     function toggleMenu() {
-      document.getElementById('site-nav').classList.toggle('active');
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
     }
-
-    const modal = document.getElementById('modal');
-    const modalImg = document.getElementById('modal-img');
-    const images = document.querySelectorAll('.carousel img');
-
-    images.forEach(img => {
-      img.addEventListener('click', () => {
-        modal.classList.add('active');
-        modalImg.src = img.src;
-        modalImg.alt = img.alt;
-      });
-    });
-
-    modal.addEventListener('click', () => {
-      modal.classList.remove('active');
-    });
   </script>
 </body>
 </html>
