--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Burnline – The Cyberpunk Magazine</title>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
   <style>
-body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  background: linear-gradient(135deg, #0f0f1c, #1b1e35);
-  color: #f0f0f0;
-}
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #0f0f1c, #1b1e35);
+      color: #f0f0f0;
+    }
     html {
       scroll-behavior: smooth;
     }
     h1, h2, h3, h4, h5, h6, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
-
     .site-header {
       display: flex;
       justify-content: space-between;
@@ -31,7 +30,6 @@ body {
       flex-wrap: wrap;
       position: relative;
     }
-
     .logo-title {
       display: flex;
       align-items: center;
@@ -39,30 +37,24 @@ body {
       text-decoration: none;
       color: inherit;
     }
-
     .logo-title img {
       height: 60px;
       width: auto;
     }
-
     .site-nav {
       display: flex;
       gap: 2rem;
       font-size: 1rem;
     }
-
     .site-nav a {
       color: #0f0f1c;
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s;
     }
-
     .site-nav a:hover {
       color: #ff4ac2;
     }
-
-    /* Hamburger styles */
     .hamburger {
       display: none;
       flex-direction: column;
@@ -72,14 +64,12 @@ body {
       height: 25px;
       gap: 5px;
     }
-
     .hamburger div {
       background: #0f0f1c;
       height: 4px;
       width: 100%;
       border-radius: 2px;
     }
-
     @media (max-width: 768px) {
       .site-nav {
         flex-direction: column;
@@ -89,16 +79,13 @@ body {
         padding: 1rem 0;
         margin-top: 1rem;
       }
-
       .site-nav.active {
         display: flex;
       }
-
       .hamburger {
         display: flex;
       }
     }
-
     .hero {
       display: flex;
       flex-direction: row;
@@ -110,43 +97,36 @@ body {
       text-align: left;
       flex-wrap: wrap;
     }
-
     .hero-text {
       max-width: 600px;
     }
-
     .hero-text h1 {
       font-size: 2.2rem;
       color: #ff4ac2;
       margin-bottom: 1rem;
     }
-
     .hero-text p {
       font-size: 1.2rem;
       color: #ccc;
       margin-bottom: 1.5rem;
     }
-
     .hero img {
       max-width: 300px;
       border-radius: 8px;
       box-shadow: 0 0 15px rgba(0,0,0,0.4);
     }
-
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
       padding: 3rem 2rem;
     }
-
     .card {
       background: #22253e;
       border-radius: 12px;
       padding: 1.5rem;
       box-shadow: 0 0 20px rgba(13, 246, 227, 0.1);
     }
-
     .card img {
       width: 100%;
       height: 180px;
@@ -154,17 +134,14 @@ body {
       border-radius: 8px;
       margin-bottom: 1rem;
     }
-
     .card h3 {
       color: #0df6e3;
       margin-bottom: 0.5rem;
     }
-
     .card p {
       font-size: 0.95rem;
       color: #bbb;
     }
-
     .gradient-heading {
       font-size: 2rem;
       background: linear-gradient(90deg, #f72585, #7209b7);
@@ -172,7 +149,6 @@ body {
       -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
     }
-
     footer {
       background: #0f0f1c;
       padding: 4rem 2rem 2rem;
@@ -180,11 +156,9 @@ body {
       font-size: 0.9rem;
       font-family: 'Inter', sans-serif;
     }
-
     footer a:hover {
       color: #0df6e3;
     }
-
     .footer-container {
       display: flex;
       flex-wrap: wrap;
@@ -193,17 +167,14 @@ body {
       max-width: 1200px;
       margin: auto;
     }
-
     .footer-column {
       flex: 1 1 250px;
       min-width: 200px;
     }
-
     .footer-logo {
       height: 100px;
       margin-bottom: 1rem;
     }
-
     .footer-bottom {
       text-align: center;
       margin-top: 3rem;
@@ -211,7 +182,6 @@ body {
       padding-top: 1rem;
       color: #555;
     }
-
     .newsletter-input {
       padding: 0.6rem 1rem;
       border-radius: 4px;
@@ -219,7 +189,6 @@ body {
       width: 70%;
       margin-bottom: 0.8rem;
     }
-
     .newsletter-button {
       padding: 0.6rem 1.2rem;
       background-color: #0df6e3;
@@ -229,7 +198,6 @@ body {
       font-weight: bold;
       cursor: pointer;
     }
-
     .read-issue-btn {
       background-color: #0df6e3;
       border: none;
@@ -243,19 +211,17 @@ body {
       margin-top: 1rem;
       transition: background-color 0.3s;
     }
-
     .read-issue-btn:hover {
       background-color: #0ad3c6;
     }
   </style>
 </head>
 <body>
-
   <header class="site-header">
-<a href="index.html" class="logo-title">
-  <img src="Flame logo-1.png.png" alt="Burnline logo">
-  <span>BURNLINE</span>
-</a>
+    <a href="index.html" class="logo-title">
+      <img src="Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </a>
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
@@ -266,6 +232,7 @@ body {
       <a href="https://bowliopia.github.io/burnline/art.html">Art</a>
       <a href="https://bowliopia.github.io/burnline/about.html">About</a>
       <a href="https://bowliopia.github.io/burnline/submit.html">Submit</a>
+      <a href="#latest-issue">Read Latest</a>
     </nav>
   </header>
 
@@ -274,9 +241,18 @@ body {
       <h1 class="gradient-heading">The Latest Issue</h1>
       <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam].</p>
       <p>Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
-      <a href="https://www.flipsnack.com/BA6E8CA8B7A/725-asf-epdf/full-view.html" class="read-issue-btn">Read this Issue</a>
+      <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
     </div>
     <img src="Test Cover 1.png" alt="Latest issue cover">
+  </section>
+
+  <section id="latest-issue" style="padding: 2rem; text-align: center; display: none;">
+    <iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/055f81b30b.html" style="border: 1px solid lightgray; width: 100%; max-width: 900px; height: 600px; margin: 0 auto; display: block;"></iframe>
+    <p style="margin-top: 1rem;">
+      <a href="https://heyzine.com/flip-book/055f81b30b.html" target="_blank" style="color: #0df6e3; text-decoration: underline; font-family: 'Inter', sans-serif;">
+        Open in Fullscreen
+      </a>
+    </p>
   </section>
 
   <section class="grid" id="features">
@@ -308,12 +284,10 @@ body {
           <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
       </div>
-
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
-
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
@@ -321,7 +295,6 @@ body {
         <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
       </div>
     </div>
-
     <div class="footer-bottom">
       &copy; 2025 Burnline Magazine — All rights reserved
     </div>
@@ -332,6 +305,17 @@ body {
       const nav = document.getElementById('site-nav');
       nav.classList.toggle('active');
     }
+
+    document.getElementById('toggle-flipbook').addEventListener('click', function() {
+      const section = document.getElementById('latest-issue');
+      if (section.style.display === 'none') {
+        section.style.display = 'block';
+        this.textContent = 'Hide Issue';
+      } else {
+        section.style.display = 'none';
+        this.textContent = 'Read This Issue';
+      }
+    });
   </script>
 </body>
 </html>
