--- a/about.html
+++ b/about.html
@@ -189,6 +189,15 @@
   color: transparent;
   font-weight: bold;
 }
+
+        .gradient-pink-text {
+  background: linear-gradient(90deg, #f72585, #7209b7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  font-weight: bold;
+}
   </style>
 </head>
 <body>
